

11th October 2021
- USER (Dev) - Do not write full recipe on Bake if one already exists (happens during a resume). This fixes a bug where the number 
              of sections to acquire decreased each time an acquisition was resumed. 
- POWERUSER (Dev) - Hidden feature to enable Pockels cell when laser is turned on or off. Uses an NI DAQ. 

22nd September 2021
- USER (Dev) - Cut size moved to Prepare GUI and is set automatically when "Set Blade Position" is pressed
- USER (Dev) - Z-jack now locks after the first slice not when a cutting position is set. 
- USER (Dev) - Overlaid stage boundaries no longer are limited by the blade on the x axis. 

14th September
- USER (Dev) - Sample ID is set automatically after the user chooses a save directory 


10th September 2021
- USER (Dev) - When a cutting position is set the Z jack motions via the GUI are disabled using a checkbox. This can be over-ridden by the user. 
- USER (Dev) - Slice last section is now removed from the acqusition view and is disabled by default. 


5th September 2021
- USER (Dev) - Stages that need referencing no longer auto-ref when connected. Instead the user must manually select Tools > References Stages from the menu.
- DEVELOPER (Dev) - Zaber linear stages can be used as X/Y. e.g. X-LRM100A-DE51 are verified to work.